--- a/Practica-1/index.html
+++ b/Practica-1/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="style1.css">
+    <title>Girasol Lila</title>
 </head>
 <body>
 
@@ -16,12 +16,12 @@
             <nav class="nav">
                 <ul>
                     <li><a href="/index.html">Flower</a></li>
-                    <li><a href="/ind2.html">Car</a></li>
-                    <li><a href="/inde3.html">Space</a></li>
+                    <li><a href="/index2.html">Car</a></li>
+                    <li><a href="/index3.html">Space</a></li>
                 </ul>
             </nav>
             <div class="name">
-                    <h1>Girasol <br> Blanco</h1>
+                    <h1>Girasol <br> Lila</h1>
             </div>
 
             <div class="decoration">
